clear DB on restart